@@ -13,6 +13,8 @@ User changes
 Bug fixes
 ---------
 
+- Fix in Rij EBRSM coupled solver (improve robustness).
+
 - "separate_meshes" writer option should not propagate to EnSight
   mesh groups output.
 
